Refactor course items logic